# linera-logger

./: README.md  front.txt  package-lock.json  package.json  run.sh
logger/: Cargo.toml
logger/src/: contract.rs  lib.rs  service.rs  state.rs
logger_macro/: Cargo.toml
logger_macro/src/: lib.rs
logging_fungible/: Cargo.toml  README.md
logging_fungible/src/: contract.rs  lib.rs  service.rs  state.rs
logging_fungible/tests/: cross_chain.rs
logging_fungible/web-frontend/: README.md  package-lock.json  package.json
logging_fungible/web-frontend/public/: index.html
logging_fungible/web-frontend/src/: App.js  GraphQLProvider.js  index.js
public/: index.html
src/: App.js  App2.js  graphql.js  index.css  index.js
src/components/: Metrics.jsx  Navbar.jsx  NoMatch.jsx  Search.jsx  Table.jsx  index.js
src/pages/: Explorer.jsx  Inspector.jsx  index.js
